UniTime GWT  - align the header messages back to the center (instead of being aligned to the left, this reverts the revision 4448)    - the reason for moving them to the left was the Scheduling Assistant (as it could display multiple enrollment messages), which no longer uses header messages (see revision 4466)

--- a/WebContent/styles/unitime.css
+++ b/WebContent/styles/unitime.css
@@ -484,6 +484,7 @@ A.unitime-Hint:link,A.unitime-Hint:visited,A.unitime-Hint:active,A.unitime-Hint:
 	text-align: left;
 	font-style: italic;
 	font-weight: normal;
+	text-align: center;
 }
 
 .unitime-WarningMessage {
@@ -491,6 +492,7 @@ A.unitime-Hint:link,A.unitime-Hint:visited,A.unitime-Hint:active,A.unitime-Hint:
 	text-align: left;
 	font-style: italic;
 	font-weight: normal;
+	text-align: center;
 }
 
 .unitime-ErrorMessage {
@@ -498,6 +500,7 @@ A.unitime-Hint:link,A.unitime-Hint:visited,A.unitime-Hint:active,A.unitime-Hint:
 	text-align: left;
 	font-style: italic;
 	font-weight: normal;
+	text-align: center;
 }
 
 .unitime-Disabled {
